crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_decl_alias-10.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    symbols: Symbols {
        fns: {},
        classes: {},
        traits: {},
        aliases: {
            "Foo": (
                Private,
                Alias {
                    name: "Foo",
                    tparams: [
                        TParam {
                            name: "T",
                            default: Some(
                                Path {
                                    segments: [
                                        Segment {
                                            ident: "d",
                                            generic_args: [],
                                        },
                                    ],
                                },
                            ),
                        },
                    ],
                    bounds: [],
                    ty: Path {
                        segments: [
                            Segment {
                                ident: "t",
                                generic_args: [],
                            },
                        ],
                    },
                },
            ),
        },
    },
    top_level: [],
}
