crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_decl_alias-7.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
(
    Module {
        imports: [],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {
                "Foo": (
                    Private,
                    Alias {
                        name: "Foo",
                        tparams: [
                            TParam {
                                name: "T",
                                default: None,
                            },
                            TParam {
                                name: "U",
                                default: None,
                            },
                        ],
                        bounds: [
                            Bound {
                                ty: Path {
                                    segments: [
                                        Segment {
                                            ident: "T",
                                            generic_args: [],
                                        },
                                    ],
                                },
                                constraint: [
                                    Path {
                                        segments: [
                                            Segment {
                                                ident: "x",
                                                generic_args: [],
                                            },
                                        ],
                                    },
                                    Path {
                                        segments: [
                                            Segment {
                                                ident: "y",
                                                generic_args: [],
                                            },
                                        ],
                                    },
                                ],
                            },
                            Bound {
                                ty: Path {
                                    segments: [
                                        Segment {
                                            ident: "U",
                                            generic_args: [],
                                        },
                                    ],
                                },
                                constraint: [
                                    Path {
                                        segments: [
                                            Segment {
                                                ident: "x",
                                                generic_args: [],
                                            },
                                        ],
                                    },
                                    Path {
                                        segments: [
                                            Segment {
                                                ident: "y",
                                                generic_args: [],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                        ty: Path {
                            segments: [
                                Segment {
                                    ident: "t",
                                    generic_args: [],
                                },
                            ],
                        },
                    },
                ),
            },
        },
        top_level: [],
    },
    [],
)
