crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_decl_alias-8.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
(
    Module {
        imports: [],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {
                "Foo": (
                    Private,
                    Alias {
                        name: "Foo",
                        tparams: [
                            TParam {
                                name: "T",
                                default: None,
                            },
                            TParam {
                                name: "U",
                                default: None,
                            },
                        ],
                        bounds: [],
                        ty: Path {
                            segments: [
                                Segment {
                                    ident: "t",
                                    generic_args: [],
                                },
                            ],
                        },
                    },
                ),
            },
        },
        top_level: [],
    },
    [],
)
